# bala2fire

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SETUP.md  partitions.csv  sdkconfig.defaults
.github/: copilot-instructions.md
components/bala2_base/: CMakeLists.txt  bala2_base.cpp
components/bala2_base/include/: bala2_base.h
components/bala2_ota/: CMakeLists.txt  bala2_ota.c
components/bala2_ota/include/: bala2_ota.h
components/balancer/: CMakeLists.txt  Kconfig  balancer.cpp
components/balancer/include/: balancer.h
components/mcp_server/: CMakeLists.txt  mcp_server.c
components/mcp_server/include/: mcp_server.h
main/: CMakeLists.txt  Kconfig.projbuild  bala2_main.cpp  bala2_wifi.c  bala2_wifi.h  idf_component.yml
tools/: bala2_client.py  bala2_ws.py  balance_keepalive.py  drive_loop.py  host_pid_balance.py  host_pid_balance_ws.py  trace_crash.py  upload.ps1
tools/mcp_server/: README.md  bala2_mcp.py  live_test.py  pyproject.toml  sample_balance.py  smoke_test.py
